# xde-session

./: .gitignore  .indent.pro  AUTHORS  ChangeLog  Makefile.am  NEWS  NEWS.in  NOTES  README.in  README.md  README.md.in  RELEASE.md  THANKS  TODO  TODO.in  autogen.sh  configure.ac  configure.template  index.md  rebuild.sh  tmp.pl
data/: Makefile.am  xdm-xde.service
data/share/X11/app-defaults/: XDE-Chooser  XDE-Greeter  XDE-Logout  XDE-XChooser  XDE-XLock  XDE-XLogin
data/share/applications/: xde-xlock.desktop
data/share/lxpanel/profile/ICEWM/: config
data/share/lxpanel/profile/MVWM/: config
data/share/lxpanel/profile/OPENBOX/: config
data/share/xde/applications/: 2bwm-git.desktop  2bwm.desktop  AfterStep.desktop  Fvwm.desktop  Fvwm1.desktop  Jwm.desktop  LXDE.desktop  adwm-git.desktop  adwm.desktop  aewm++.desktop  aewm.desktop  awesome-gnome.desktop  awesome.desktop  blackbox.desktop  bspwm.desktop  compiz.desktop  ctwm-git.desktop  ctwm.desktop  cwm.desktop  dwm-git.desktop  dwm.desktop  e16-gnome2-session.desktop  e16-gnome3-session.desktop  e16-kde-session.desktop  e16-session.desktop  echinus-git.desktop  echinus.desktop  ede.desktop  enlightenment.desktop  etwm-git.desktop  etwm.desktop  evilwm-git.desktop  evilwm.desktop  failsafewm.desktop  fluxbox.desktop  flwm.desktop  fvwm-crystal.desktop  fvwm.desktop  fvwm2.desktop  gnome.desktop  (+51 more)
data/share/xde/xsessions/: .gitignore  2bwm-git.desktop  2bwm.desktop  AfterStep-git.desktop  AfterStep.desktop  Fvwm.desktop  Fvwm1.desktop  Jwm.desktop  LXDE.desktop  adwm-git.desktop  adwm.desktop  aewm++.desktop  aewm.desktop  arch-meego.desktop  awesome-cinnamon.desktop  awesome-git.desktop  awesome-gnome.desktop  awesome.desktop  blackbox-git.desktop  blackbox.desktop  bspwm-git.desktop  bspwm.desktop  budgie-desktop.desktop  cde.desktop  cinnamon.desktop  cinnamon2d.desktop  compiz.desktop  ctwm-git.desktop  ctwm.desktop  cwm-git.desktop  cwm.desktop  dwm-git.desktop  dwm.desktop  e16-gnome2-session.desktop  e16-gnome3-session.desktop  e16-kde-session.desktop  e16-session.desktop  echinus-git.desktop  echinus.desktop  ede.desktop  (+94 more)
data/xdg/xde/adwm/: adwmrc  keysrc  setup.sh  start.sh  stylerc
data/xdg/xde/autostart/: bbrun.desktop  cbatticon.desktop  compton-fluxbox.desktop  compton.desktop  dhcpcd-gtk.desktop  docker.desktop  gatotray.desktop  icewmtray.desktop  idesk.desktop  lxpanel.desktop  menutray.desktop  nm-applet.desktop  pnmixer.desktop  remmina-applet.desktop  retrovol.desktop  smproxy.desktop  wmCalClock.desktop  wmWeather.desktop  wmappl.desktop  wmbattery.desktop  wmblob.desktop  wmbubble.desktop  wmclockmon.desktop  wmcore.desktop  wmcpuload.desktop  wmmixer.desktop  wmnd.desktop  wmnet.desktop  wmsysmon.desktop  wmsystemtray.desktop  wmtimer.desktop  wmweather+.desktop  xde-input.desktop  xde-panel.desktop  xde-setbg.desktop  xde-xlock.desktop
data/xdg/xde/blackbox/: keys  setup.pl  setup.sh  start.sh
data/xdg/xde/ctwm/: config  keys  rc  rc.m4  setup  setup.sh  start.sh
data/xdg/xde/etwm/: apps  buttons  config  defaults  getstyles  keys  rc  rc.m4  setstyle  setup  setup.sh  start  start.sh  stylemenu  winmenu
data/xdg/xde/fbpanel/: FLUXBOX  LXDE  default
data/xdg/xde/fluxbox/: fbdesk.icons  init  keys  menuconfig  setup.sh  start.sh  unexicon-menu  xde-init
data/xdg/xde/icewm/: menu  preferences  programs  recent.menu  setup.sh  start.sh
data/xdg/xde/jwm/: config  defaults  getstyles  keys  setup.sh  start.sh  tray
data/xdg/xde/lxpanel/BLACKBOX/: config
data/xdg/xde/lxpanel/FLUXBOX/: config
data/xdg/xde/lxpanel/FVWM/: config
data/xdg/xde/lxpanel/ICEWM/: config
data/xdg/xde/lxpanel/JWM/: config
data/xdg/xde/lxpanel/LXDE/: config
data/xdg/xde/lxpanel/OPENBOX/: config
data/xdg/xde/lxpanel/PEKWM/: config
data/xdg/xde/lxpanel/WMAKER/: config
data/xdg/xde/lxsession/FLUXBOX/: desktop.conf
data/xdg/xde/lxsession/LXDE/: desktop.conf
data/xdg/xde/openbox/: keys.xml  lxde-rc.xml  lxde-rc.xml.new  menu  menu.bak  rc.xml  setup.sh  start.sh  unx-rc.xml  xdg-menu.xml
data/xdg/xde/pcmanfm/BLACKBOX/: pcmanfm.conf
data/xdg/xde/pcmanfm/FLUXBOX/: pcmanfm.conf
data/xdg/xde/pcmanfm/PEKWM/: pcmanfm.conf
data/xdg/xde/pcmanfm/default/: pcmanfm.conf
data/xdg/xde/pekwm/: config  keys  menu  setup.sh  start.sh  vars  window
data/xdg/xde/twm/: config  getstyles  keys  rc  rc.m4  setup.sh  start  start.sh
data/xdg/xde/vtwm/: config  rc  rc.m4  setstyle  setup.sh  start.sh
data/xdg/xde/waimea/: config  setup  setup.sh  start  start.sh
data/xdg/xde/xde-panel/ECHINUS/: rc.xml
data/xdg/xde/xde-panel/ICEWM/: rc.xml
data/xdg/xde/xde-panel/WAIMEA/: rc.xml
data/xdg/xde/xde-session/BLACKBOX/: desktop.conf
data/xdg/xde/xde-session/FLUXBOX/: autostart  desktop.conf
data/xdg/xde/xde-session/FVWM/: desktop.conf
data/xdg/xde/xde-session/ICEWM/: desktop.conf
data/xdg/xde/xde-session/LXDE/: autostart
data/xdg/xde/xde-session/MVWM/: desktop.conf
data/xdg/xde/xde-session/WMAKER/: desktop.conf
data/xdm/xde/: Xaccess  Xreset  Xresources  Xsession  Xsetup  logo.xpm  xdm-config
man/: Application.desktop.pod  Autostart.desktop.pod  Makefile.am  XSession.desktop.pod  xde-autostart.pod  xde-chooser.pod  xde-dockapps.pod  xde-dockmgr.pod  xde-greeter.pod  xde-input.pod  xde-login.pod  xde-logout.pod  xde-session.pod  xde-session2.pod  xde-sm.pod  xde-smproxy.pod  xde-startwm.pod  xde-trayicons.pod  xde-traymgr.pod  xde-wait.pod  xde-wmproxy.pod  xde-xchooser.pod  xde-xlock.pod  xde-xlogin.pod  xde-xsession.pod  xde-xswitch.pod  xmproxy.pod
src/: Makefile.am  autostart.c  autostart.h  display.c  display.h  manager.c  manager.h  smclient.c  smclient.h  test-login.c  test-pipe.c  test-root  test-root.c  vncExt.c  xde-autostart.c  xde-autostart.h  xde-chooser.c  xde-chooser.h  xde-dockmgr.c  xde-greeter.c  xde-input.c  xde-input.h  xde-login.c  xde-login.h  xde-logout.c  xde-logout.h  xde-session.c  xde-session.h  xde-sm.c  xde-smproxy.c  xde-smproxy.h  xde-startwm.c  xde-traymgr.c  xde-wait.c  xde-wmproxy.c  xde-wmproxy.h  xde-xchooser.c  xde-xchooser.h  xde-xlock.c  xde-xlogin.c  (+5 more)
(+169 files in other folders)
