
nobase_dist_xdgconf_DATA = \
	xdg/pcmanfm/BLACKBOX/pcmanfm.conf \
	xdg/pcmanfm/FLUXBOX/pcmanfm.conf \
	xdg/pcmanfm/FVWM/pcmanfm.conf \
	xdg/pcmanfm/ICEWM/pcmanfm.conf \
	xdg/pcmanfm/MVWM/pcmanfm.conf \
	xdg/pcmanfm/OPENBOX/pcmanfm.conf \
	xdg/pcmanfm/WMAKER/pcmanfm.conf

nobase_dist_xdgconf_DATA += \
	xdg/xde/autostart/bbrun.desktop \
	xdg/xde/autostart/cbatticon.desktop \
	xdg/xde/autostart/compton.desktop \
	xdg/xde/autostart/compton-fluxbox.desktop \
	xdg/xde/autostart/dhcpcd-gtk.desktop \
	xdg/xde/autostart/docker.desktop \
	xdg/xde/autostart/gatotray.desktop \
	xdg/xde/autostart/icewmtray.desktop \
	xdg/xde/autostart/idesk.desktop \
	xdg/xde/autostart/lxpanel.desktop \
	xdg/xde/autostart/menutray.desktop \
	xdg/xde/autostart/nm-applet.desktop \
	xdg/xde/autostart/pnmixer.desktop \
	xdg/xde/autostart/remmina-applet.desktop \
	xdg/xde/autostart/retrovol.desktop \
	xdg/xde/autostart/smproxy.desktop \
	xdg/xde/autostart/wmappl.desktop \
	xdg/xde/autostart/wmbattery.desktop \
	xdg/xde/autostart/wmblob.desktop \
	xdg/xde/autostart/wmbubble.desktop \
	xdg/xde/autostart/wmCalClock.desktop \
	xdg/xde/autostart/wmclockmon.desktop \
	xdg/xde/autostart/wmcore.desktop \
	xdg/xde/autostart/wmcpuload.desktop \
	xdg/xde/autostart/wmmixer.desktop \
	xdg/xde/autostart/wmnd.desktop \
	xdg/xde/autostart/wmnet.desktop \
	xdg/xde/autostart/wmsysmon.desktop \
	xdg/xde/autostart/wmsystemtray.desktop \
	xdg/xde/autostart/wmtimer.desktop \
	xdg/xde/autostart/wmWeather.desktop \
	xdg/xde/autostart/wmweather+.desktop \
	xdg/xde/autostart/xde-input.desktop \
	xdg/xde/autostart/xde-panel.desktop \
	xdg/xde/autostart/xde-setbg.desktop \
	xdg/xde/autostart/xde-xlock.desktop

nobase_dist_xdgconf_DATA += \
	xdg/xde/compton/compton.conf \
	xdg/xde/compton/default/compton.conf \
	xdg/xde/compton/FLUXBOX/compton.conf \
	xdg/xde/fbpanel/default \
	xdg/xde/fbpanel/FLUXBOX \
	xdg/xde/fbpanel/LXDE \
	xdg/xde/lxpanel/BLACKBOX/config \
	xdg/xde/lxpanel/BLACKBOX/panels/panel \
	xdg/xde/lxpanel/default/config \
	xdg/xde/lxpanel/default/panels/panel \
	xdg/xde/lxpanel/FLUXBOX/config \
	xdg/xde/lxpanel/FLUXBOX/panels/panel \
	xdg/xde/lxpanel/FVWM/config \
	xdg/xde/lxpanel/FVWM/panels/panel \
	xdg/xde/lxpanel/ICEWM/config \
	xdg/xde/lxpanel/ICEWM/panels/panel \
	xdg/xde/lxpanel/JWM/config \
	xdg/xde/lxpanel/JWM/panels/panel \
	xdg/xde/lxpanel/LXDE/config \
	xdg/xde/lxpanel/LXDE/panels/panel \
	xdg/xde/lxpanel/MVWM/config \
	xdg/xde/lxpanel/MVWM/panels/panel \
	xdg/xde/lxpanel/OPENBOX/config \
	xdg/xde/lxpanel/OPENBOX/panels/panel \
	xdg/xde/lxpanel/PEKWM/config \
	xdg/xde/lxpanel/PEKWM/panels/panel \
	xdg/xde/lxpanel/WMAKER/config \
	xdg/xde/lxpanel/WMAKER/panels/panel \
	xdg/xde/lxsession/FLUXBOX/autostart \
	xdg/xde/lxsession/FLUXBOX/desktop.conf \
	xdg/xde/lxsession/LXDE/desktop.conf \
	xdg/xde/pcmanfm/BLACKBOX/pcmanfm.conf \
	xdg/xde/pcmanfm/default/desktop-items-0.conf \
	xdg/xde/pcmanfm/default/pcmanfm.conf \
	xdg/xde/pcmanfm/FLUXBOX/desktop-items-0.conf \
	xdg/xde/pcmanfm/FLUXBOX/pcmanfm.conf \
	xdg/xde/pcmanfm/ICEWM/pcmanfm.conf \
	xdg/xde/pcmanfm/LXDE/desktop-items-0.conf \
	xdg/xde/pcmanfm/LXDE/pcmanfm.conf \
	xdg/xde/pcmanfm/PEKWM/desktop-items-0.conf \
	xdg/xde/pcmanfm/PEKWM/pcmanfm.conf \
	xdg/xde/xde-panel/ADWM/rc.xml \
	xdg/xde/xde-panel/BLACKBOX/rc.xml \
	xdg/xde/xde-panel/default/rc.xml \
	xdg/xde/xde-panel/ECHINUS/rc.xml \
	xdg/xde/xde-panel/FLUXBOX/rc.xml \
	xdg/xde/xde-panel/FVWM/rc.xml \
	xdg/xde/xde-panel/ICEWM/rc.xml \
	xdg/xde/xde-panel/JWM/rc.xml \
	xdg/xde/xde-panel/METACITY/rc.xml \
	xdg/xde/xde-panel/MVWM/rc.xml \
	xdg/xde/xde-panel/OPENBOX/rc.xml \
	xdg/xde/xde-panel/PEKWM/rc.xml \
	xdg/xde/xde-panel/WAIMEA/rc.xml \
	xdg/xde/xde-panel/WMAKER/rc.xml \
	xdg/xde/xde-session/BLACKBOX/desktop.conf \
	xdg/xde/xde-session/default/input.ini \
	xdg/xde/xde-session/default/xsettings.ini \
	xdg/xde/xde-session/FLUXBOX/autostart \
	xdg/xde/xde-session/FLUXBOX/desktop.conf \
	xdg/xde/xde-session/FVWM/desktop.conf \
	xdg/xde/xde-session/ICEWM/desktop.conf \
	xdg/xde/xde-session/LXDE/autostart \
	xdg/xde/xde-session/MVWM/desktop.conf \
	xdg/xde/xde-session/OPENBOX/desktop.conf \
	xdg/xde/xde-session/WMAKER/desktop.conf

nobase_dist_xdgconf_DATA += \
	xdg/xde/adwm/adwmrc \
	xdg/xde/adwm/keysrc \
	xdg/xde/adwm/stylerc \
	xdg/xde/adwm/version \
	xdg/xde/blackbox/keys \
	xdg/xde/blackbox/menu \
	xdg/xde/blackbox/rc \
	xdg/xde/blackbox/version \
	xdg/xde/blackbox/xde-rc \
	xdg/xde/ctwm/apps \
	xdg/xde/ctwm/buttons \
	xdg/xde/ctwm/defaults \
	xdg/xde/ctwm/keys \
	xdg/xde/ctwm/menu \
	xdg/xde/ctwm/rc \
	xdg/xde/ctwm/rc.m4 \
	xdg/xde/ctwm/setstyle \
	xdg/xde/ctwm/stylemenu \
	xdg/xde/ctwm/version \
	xdg/xde/ctwm/winmenu \
	xdg/xde/echinus/version \
	xdg/xde/etwm/apps \
	xdg/xde/etwm/buttons \
	xdg/xde/etwm/defaults \
	xdg/xde/etwm/keys \
	xdg/xde/etwm/menu \
	xdg/xde/etwm/rc \
	xdg/xde/etwm/rc.m4 \
	xdg/xde/etwm/stylemenu \
	xdg/xde/etwm/version \
	xdg/xde/etwm/winmenu \
	xdg/xde/fluxbox/apps \
	xdg/xde/fluxbox/fbdesk \
	xdg/xde/fluxbox/fbdesk.icons \
	xdg/xde/fluxbox/fbpager \
	xdg/xde/fluxbox/init \
	xdg/xde/fluxbox/keys \
	xdg/xde/fluxbox/menu \
	xdg/xde/fluxbox/menuconfig \
	xdg/xde/fluxbox/overlay \
	xdg/xde/fluxbox/slitlist \
	xdg/xde/fluxbox/startup \
	xdg/xde/fluxbox/unexicon-menu \
	xdg/xde/fluxbox/usermenu \
	xdg/xde/fluxbox/version \
	xdg/xde/fluxbox/windowmenu \
	xdg/xde/fluxbox/xde-init \
	xdg/xde/fvwm/version \
	xdg/xde/icewm/focus_mode \
	xdg/xde/icewm/keys \
	xdg/xde/icewm/menu \
	xdg/xde/icewm/preferences \
	xdg/xde/icewm/preferences.bak \
	xdg/xde/icewm/prefoverride \
	xdg/xde/icewm/programs \
	xdg/xde/icewm/recent.menu \
	xdg/xde/icewm/theme \
	xdg/xde/icewm/toolbar \
	xdg/xde/icewm/version \
	xdg/xde/icewm/winoptions \
	xdg/xde/jwm/defaults \
	xdg/xde/jwm/desktop \
	xdg/xde/jwm/groups \
	xdg/xde/jwm/keys \
	xdg/xde/jwm/menu \
	xdg/xde/jwm/paths \
	xdg/xde/jwm/rc \
	xdg/xde/jwm/root \
	xdg/xde/jwm/style \
	xdg/xde/jwm/tray \
	xdg/xde/jwm/version \
	xdg/xde/lxde/version \
	xdg/xde/metacity/version \
	xdg/xde/openbox/keys.xml \
	xdg/xde/openbox/lxde-rc.xml \
	xdg/xde/openbox/lxde-rc.xml.new \
	xdg/xde/openbox/menu \
	xdg/xde/openbox/menu.bak \
	xdg/xde/openbox/menu.xml \
	xdg/xde/openbox/menu.xml.back \
	xdg/xde/openbox/menu.xml.new \
	xdg/xde/openbox/menu.xml.old \
	xdg/xde/openbox/rc.xml \
	xdg/xde/openbox/rc.xml.orig \
	xdg/xde/openbox/unx-rc.xml \
	xdg/xde/openbox/version \
	xdg/xde/openbox/xdg-menu.xml \
	xdg/xde/pekwm/config \
	xdg/xde/pekwm/keys \
	xdg/xde/pekwm/menu \
	xdg/xde/pekwm/vars \
	xdg/xde/pekwm/version \
	xdg/xde/pekwm/window \
	xdg/xde/twm/apps \
	xdg/xde/twm/buttons \
	xdg/xde/twm/defaults \
	xdg/xde/twm/keys \
	xdg/xde/twm/menu \
	xdg/xde/twm/rc \
	xdg/xde/twm/rc.m4 \
	xdg/xde/twm/stylemenu \
	xdg/xde/twm/version \
	xdg/xde/twm/winmenu \
	xdg/xde/uwm/buttons \
	xdg/xde/uwm/keys \
	xdg/xde/uwm/menu \
	xdg/xde/uwm/panel \
	xdg/xde/uwm/uwmrc \
	xdg/xde/uwm/version \
	xdg/xde/uwm/winmenu \
	xdg/xde/vtwm/apps \
	xdg/xde/vtwm/buttons \
	xdg/xde/vtwm/defaults \
	xdg/xde/vtwm/keys \
	xdg/xde/vtwm/menu \
	xdg/xde/vtwm/rc \
	xdg/xde/vtwm/rc.m4 \
	xdg/xde/vtwm/stylemenu \
	xdg/xde/vtwm/version \
	xdg/xde/vtwm/winmenu \
	xdg/xde/waimea/actionrc \
	xdg/xde/waimea/config \
	xdg/xde/waimea/menu \
	xdg/xde/waimea/version \
	xdg/xde/wmaker/version

nobase_dist_xdgconf_SCRIPTS = \
	xdg/xde/adwm/setup.sh \
	xdg/xde/adwm/start.sh \
	xdg/xde/blackbox/setup.pl \
	xdg/xde/blackbox/setup.sh \
	xdg/xde/blackbox/start.sh \
	xdg/xde/ctwm/config \
	xdg/xde/ctwm/getstyles \
	xdg/xde/ctwm/setstyle \
	xdg/xde/ctwm/setup \
	xdg/xde/ctwm/setup.sh \
	xdg/xde/ctwm/start \
	xdg/xde/ctwm/start.sh \
	xdg/xde/etwm/config \
	xdg/xde/etwm/getstyles \
	xdg/xde/etwm/setstyle \
	xdg/xde/etwm/setup \
	xdg/xde/etwm/setup.sh \
	xdg/xde/etwm/start \
	xdg/xde/etwm/start.sh \
	xdg/xde/fluxbox/setup.sh \
	xdg/xde/fluxbox/start.sh \
	xdg/xde/icewm/setup.sh \
	xdg/xde/icewm/start.sh \
	xdg/xde/jwm/config \
	xdg/xde/jwm/getstyles \
	xdg/xde/jwm/setstyle \
	xdg/xde/jwm/setup.sh \
	xdg/xde/jwm/start.sh \
	xdg/xde/openbox/setup.sh \
	xdg/xde/openbox/start.sh \
	xdg/xde/pekwm/setup.sh \
	xdg/xde/pekwm/start.sh \
	xdg/xde/twm/config \
	xdg/xde/twm/getstyles \
	xdg/xde/twm/setstyle \
	xdg/xde/twm/setup.sh \
	xdg/xde/twm/start \
	xdg/xde/twm/start.sh \
	xdg/xde/uwm/setup \
	xdg/xde/uwm/start \
	xdg/xde/vtwm/config \
	xdg/xde/vtwm/getstyles \
	xdg/xde/vtwm/setstyle \
	xdg/xde/vtwm/setup.sh \
	xdg/xde/vtwm/start \
	xdg/xde/vtwm/start.sh \
	xdg/xde/waimea/setup \
	xdg/xde/waimea/setup.sh \
	xdg/xde/waimea/start \
	xdg/xde/waimea/start.sh

AM_INSTALLCHECK_STD_OPTIONS_EXEMPT = \
	xdg/xde/adwm/setup.sh \
	xdg/xde/adwm/start.sh \
	xdg/xde/blackbox/setup.pl \
	xdg/xde/blackbox/setup.sh \
	xdg/xde/blackbox/start.sh \
	xdg/xde/ctwm/config \
	xdg/xde/ctwm/getstyles \
	xdg/xde/ctwm/setstyle \
	xdg/xde/ctwm/setup \
	xdg/xde/ctwm/setup.sh \
	xdg/xde/ctwm/start \
	xdg/xde/ctwm/start.sh \
	xdg/xde/etwm/config \
	xdg/xde/etwm/getstyles \
	xdg/xde/etwm/setstyle \
	xdg/xde/etwm/setup \
	xdg/xde/etwm/setup.sh \
	xdg/xde/etwm/start \
	xdg/xde/etwm/start.sh \
	xdg/xde/fluxbox/setup.sh \
	xdg/xde/fluxbox/start.sh \
	xdg/xde/icewm/setup.sh \
	xdg/xde/icewm/start.sh \
	xdg/xde/jwm/config \
	xdg/xde/jwm/getstyles \
	xdg/xde/jwm/setstyle \
	xdg/xde/jwm/setup.sh \
	xdg/xde/jwm/start.sh \
	xdg/xde/openbox/setup.sh \
	xdg/xde/openbox/start.sh \
	xdg/xde/pekwm/setup.sh \
	xdg/xde/pekwm/start.sh \
	xdg/xde/twm/config \
	xdg/xde/twm/getstyles \
	xdg/xde/twm/setstyle \
	xdg/xde/twm/setup.sh \
	xdg/xde/twm/start \
	xdg/xde/twm/start.sh \
	xdg/xde/uwm/setup \
	xdg/xde/uwm/start \
	xdg/xde/vtwm/config \
	xdg/xde/vtwm/getstyles \
	xdg/xde/vtwm/setstyle \
	xdg/xde/vtwm/setup.sh \
	xdg/xde/vtwm/start \
	xdg/xde/vtwm/start.sh \
	xdg/xde/waimea/setup \
	xdg/xde/waimea/setup.sh \
	xdg/xde/waimea/start \
	xdg/xde/waimea/start.sh

nobase_dist_xdgdata_DATA = \
	share/applications/xde-xlock.desktop

nobase_dist_xdgdata_DATA += \
	share/xde/xsessions/2bwm.desktop \
	share/xde/xsessions/adwm.desktop \
	share/xde/xsessions/aewm.desktop \
	share/xde/xsessions/aewm++.desktop \
	share/xde/xsessions/AfterStep.desktop \
	share/xde/xsessions/awesome.desktop \
	share/xde/xsessions/blackbox.desktop \
	share/xde/xsessions/bspwm.desktop \
	share/xde/xsessions/ctwm.desktop \
	share/xde/xsessions/cwm.desktop \
	share/xde/xsessions/dwm.desktop \
	share/xde/xsessions/e16-gnome2-session.desktop \
	share/xde/xsessions/e16-gnome3-session.desktop \
	share/xde/xsessions/e16-kde-session.desktop \
	share/xde/xsessions/e16-session.desktop \
	share/xde/xsessions/echinus.desktop \
	share/xde/xsessions/ede.desktop \
	share/xde/xsessions/evilwm.desktop \
	share/xde/xsessions/failsafewm.desktop \
	share/xde/xsessions/fluxbox.desktop \
	share/xde/xsessions/flwm.desktop \
	share/xde/xsessions/Fvwm1.desktop \
	share/xde/xsessions/fvwm2.desktop \
	share/xde/xsessions/fvwm-crystal.desktop \
	share/xde/xsessions/Fvwm.desktop \
	share/xde/xsessions/fvwm.desktop \
	share/xde/xsessions/gnome.desktop \
	share/xde/xsessions/goomwwm.desktop \
	share/xde/xsessions/herbstluftwm.desktop \
	share/xde/xsessions/i3.desktop \
	share/xde/xsessions/i3-with-shmlog.desktop \
	share/xde/xsessions/icewm.desktop \
	share/xde/xsessions/icewm-session.desktop \
	share/xde/xsessions/Jwm.desktop \
	share/xde/xsessions/larswm.desktop \
	share/xde/xsessions/LXDE.desktop \
	share/xde/xsessions/mantis-wm.desktop \
	share/xde/xsessions/matwm2.desktop \
	share/xde/xsessions/metacity.desktop \
	share/xde/xsessions/mutter.desktop \
	share/xde/xsessions/mvwm.desktop \
	share/xde/xsessions/mwm.desktop \
	share/xde/xsessions/openbox.desktop \
	share/xde/xsessions/openbox-gnome.desktop \
	share/xde/xsessions/openbox-kde.desktop \
	share/xde/xsessions/pawm.desktop \
	share/xde/xsessions/pekwm.desktop \
	share/xde/xsessions/spectrwm.desktop \
	share/xde/xsessions/ssh.desktop \
	share/xde/xsessions/twm.desktop \
	share/xde/xsessions/uwm.desktop \
	share/xde/xsessions/velox.desktop \
	share/xde/xsessions/vtwm.desktop \
	share/xde/xsessions/waimea.desktop \
	share/xde/xsessions/wind.desktop \
	share/xde/xsessions/windwm.desktop \
	share/xde/xsessions/wm2.desktop \
	share/xde/xsessions/wmaker.desktop \
	share/xde/xsessions/wmii.desktop \
	share/xde/xsessions/wmx.desktop \
	share/xde/xsessions/xdwm.desktop \
	share/xde/xsessions/xfce.desktop \
	share/xde/xsessions/yeahwm.desktop

nobase_dist_xdgdata_DATA += \
	share/lxpanel/profile/BLACKBOX/config \
	share/lxpanel/profile/BLACKBOX/panels/panel \
	share/lxpanel/profile/FLUXBOX/config \
	share/lxpanel/profile/FLUXBOX/panels/panel \
	share/lxpanel/profile/FVWM/config \
	share/lxpanel/profile/FVWM/panels/panel \
	share/lxpanel/profile/ICEWM/config \
	share/lxpanel/profile/ICEWM/panels/panel \
	share/lxpanel/profile/MVWM/config \
	share/lxpanel/profile/MVWM/panels/panel \
	share/lxpanel/profile/OPENBOX/config \
	share/lxpanel/profile/OPENBOX/panels/panel \
	share/lxpanel/profile/WMAKER/config \
	share/lxpanel/profile/WMAKER/panels/panel

nobase_dist_xdgdata_DATA += \
	share/xde/images/arch-banner.png \
	share/xde/images/arch-splash.jpg \
	share/xde/images/banner.png \
	share/xde/images/splash.jpg \
	share/xde/images/unexicon-banner.png \
	share/xde/images/unexicon-splash.jpg

nobase_dist_xdgdata_DATA += \
	share/X11/app-defaults/XDE-Chooser \
	share/X11/app-defaults/XDE-Logout \
	share/X11/app-defaults/XDE-XLock

nobase_dist_xdmconf_DATA = \
	xdm/xde/background.jpg \
	xdm/xde/logo.xpm \
	xdm/xde/Xaccess \
	xdm/xde/xdm-config \
	xdm/xde/Xresources \
	xdm/xde/Xservers

nobase_dist_xdmconf_SCRIPTS = \
	xdm/xde/chooser \
	xdm/xde/greeter \
	xdm/xde/xlogin \
	xdm/xde/Xreset \
	xdm/xde/Xsession \
	xdm/xde/Xsetup \
	xdm/xde/Xstartup

AM_INSTALLCHECK_STD_OPTIONS_EXEMPT += \
	xdm/xde/chooser \
	xdm/xde/greeter \
	xdm/xde/xlogin \
	xdm/xde/Xreset \
	xdm/xde/Xsession \
	xdm/xde/Xsetup \
	xdm/xde/Xstartup

dist_pamconf_DATA = \
	xde \
	xde-autologin \
	xde-greeter

dist_systemd_DATA = \
	xdm-xde.service

